solved bugs on mobile

--- a/main-src/src/stylesheets/main-page.scss
+++ b/main-src/src/stylesheets/main-page.scss
@@ -21,7 +21,7 @@
 
 @media screen and (max-width: 600px){
   .web-background {
-    transform: scale(2.5);
+    transform: scale(2.7);
     z-index: 10;
   }
 }
